# SPA_Habit_Tracker

./: .env.sample  LICENSE.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
users/: models.py
