[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.1"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
drf-yasg = "^1.21.8"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
